Fix alignment of notice lists in block placeholders (#20024)
This change updates the margins of the notice UI added to block
placeholders using the `withNotices` mixin. The update was necessary
after #18745 which made the content of block placeholders left-aligned.

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -62,8 +62,7 @@
 	 */
 
 	.components-placeholder .components-with-notices-ui {
-		margin: -10px 20px 12px 20px;
-		width: calc(100% - 40px);
+		margin: -10px 0 12px 0;
 	}
 
 	.components-with-notices-ui {
